MET-6733 fields support updated after review